tests/errors/errors/test4.c
void f()
{
    return 3.14;
}
void main()
{
    int a = f();
}
